update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-11-16T15:13:01.088Z'
+created: '2023-11-16T15:24:31.529Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -212,7 +212,53 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 8f350c19-acfd-4b24-a2fc-2e2234b7cc5a
-  - content: ''
+  - content: >-
+      ## What is the Project Lifecycle?
+
+      The lifecycle of a project typically progresses through several distinct
+      phases, each with its own set of development goals and milestones:
+
+
+      1. **Ideation Phase**: Here, the project begins as a compelling idea aimed
+      at addressing a specific issue within the ecosystem.
+
+
+      2. **Proof of Concept Phase**: The project's feasibility is validated
+      through market research, competitive analysis, and technical evaluation.
+      Initial team assembly focuses on achieving a minimum viable product (MVP),
+      and foundational infrastructure such as social media, websites, and
+      company registration is established.
+
+
+      3. **Prototype Phase**: A rudimentary version of the project is developed
+      to showcase the concept. Private testing begins, the public presence
+      grows, and the team expands as needed. Seed funding may be sought
+      post-prototype completion.
+
+
+      4. **Testing Phase**: A viable but unrefined product undergoes public or
+      semi-public testing. Continuous iterations are made based on user
+      feedback, with new features being added. Revenue models may start being
+      tested, marketing efforts increase, and partnerships are explored.
+
+
+      5. **Launch Phase**: The project officially launches for public use.
+      Development persists to add features and polish the product. This is a
+      critical period where community feedback significantly impacts the
+      project's direction, and the initial user base starts to form.
+
+
+      6. **Growth Phase**: The project enters a stabilization period where the
+      main development goals have been met. The focus shifts to enhancing user
+      engagement and broadening market presence. Funding rounds or partnerships
+      may be pursued to fuel expansion, and metrics are implemented to gauge
+      impact.
+
+
+      7. **Maturity Phase**: The project secures a stable position within the
+      market with a consistent user base. It becomes self-sustaining, even as
+      competition arises. The project may continue as is or pivot towards new
+      innovations and goals.
     name: Project Lifecycle
     stepItems: []
     uuid: 9c607bda-f00d-4ad8-9aa5-6007231bd3de
