update guide Foundation Grants

--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-11-16T15:24:31.529Z'
+created: '2023-11-16T15:31:53.975Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -234,6 +234,11 @@ steps:
       to showcase the concept. Private testing begins, the public presence
       grows, and the team expands as needed. Seed funding may be sought
       post-prototype completion.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/foundation_grants_arbitrum_university_884/1700148690645_screenshot_2023-11-16%20at%208.29.47%20pm.png"/>
+      </div>
 
 
       4. **Testing Phase**: A viable but unrefined product undergoes public or
