--- a/src/bytes/main/what-is-arbitrum-arbitrum-university.yaml
+++ b/src/bytes/main/what-is-arbitrum-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: b399c1f3-e331-46ee-9b48-f1245a308a84
+uniqueId: eaa49e39-c53e-4402-b2ce-7cd24fe76133
 id: what-is-arbitrum-arbitrum-university
 name: What is Arbitrum
 content: Understanding Arbitrum, a Layer 2 scaling solution for Ethereum
@@ -35,18 +35,18 @@ steps:
   - name: What is Layer 2?
     uuid: 8c71eac7-f980-4c8c-aa54-167eda0d199d
     content: >-
-      Layer 2 refers to a secondary framework or protocol built on top of an
-      existing blockchain system, known as Layer 1. Its primary purpose is to
-      address scalability and performance issues by handling transactions off
-      the main chain, thus enabling faster processing times and reduced
-      transaction costs.
+      Layer 2 refers to a secondary framework built on top of an existing
+      blockchain system or Layer 1. Its primary purpose is to address
+      scalability and performance issues by handling transactions off the main
+      chain, thus enabling faster processing times and reduced transaction
+      costs.
     stepItems: []
   - name: Benefits of Layer 2
     uuid: 8053b896-fead-47dc-bf1c-58e219cad904
     content: >-
       By handling transactions off the main chain, Layer 2 can process many more
       transactions per second, reducing costs and improving speed. Despite
-      processing transactions off-chain, Layer 2 solutions typically inherit the
-      strong security guarantees of the underlying main chain.
+      off-chain processing, these typically inherit the strong security
+      guarantees of the underlying main chain.
     stepItems: []
 spaceId: arbitrum-university
