update bytes working-of-optimistic-rollups-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -1,3 +1,4 @@
 bytes:
   - what-is-arbitrum-arbitrum-university.yaml
   - what-are-rollups-arbitrum-university.yaml
+  - working-of-optimistic-rollups-arbitrum-university.yaml
