update bytes arbitrum-bridge-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -2,3 +2,4 @@ bytes:
   - what-is-arbitrum-arbitrum-university.yaml
   - what-are-rollups-arbitrum-university.yaml
   - working-of-optimistic-rollups-arbitrum-university.yaml
+  - arbitrum-bridge-arbitrum-university.yaml
