--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -3,3 +3,4 @@ bytes:
   - what-are-rollups-arbitrum-university.yaml
   - working-of-optimistic-rollups-arbitrum-university.yaml
   - arbitrum-bridge-arbitrum-university.yaml
+  - arbitrum-chains-arbitrum-university.yaml
