update bytes arbitrum-governance-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -4,3 +4,4 @@ bytes:
   - working-of-optimistic-rollups-arbitrum-university.yaml
   - arbitrum-bridge-arbitrum-university.yaml
   - arbitrum-chains-arbitrum-university.yaml
+  - arbitrum-governance-arbitrum-university.yaml
