update bytes arbitrum-dao-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -5,3 +5,4 @@ bytes:
   - arbitrum-bridge-arbitrum-university.yaml
   - arbitrum-chains-arbitrum-university.yaml
   - arbitrum-governance-arbitrum-university.yaml
+  - arbitrum-dao-arbitrum-university.yaml
