--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -6,3 +6,4 @@ bytes:
   - arbitrum-chains-arbitrum-university.yaml
   - arbitrum-governance-arbitrum-university.yaml
   - arbitrum-dao-arbitrum-university.yaml
+  - security-council-arbitrum-university.yaml
