--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -7,3 +7,4 @@ bytes:
   - arbitrum-governance-arbitrum-university.yaml
   - arbitrum-dao-arbitrum-university.yaml
   - security-council-arbitrum-university.yaml
+  - arbitrum-foundation-arbitrum-university.yaml
