update bytes what-is-arbitrum-nitro-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -8,3 +8,4 @@ bytes:
   - arbitrum-dao-arbitrum-university.yaml
   - security-council-arbitrum-university.yaml
   - arbitrum-foundation-arbitrum-university.yaml
+  - what-is-arbitrum-nitro-arbitrum-university.yaml
