update bytes arbitrum-nitro-design-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -9,3 +9,4 @@ bytes:
   - security-council-arbitrum-university.yaml
   - arbitrum-foundation-arbitrum-university.yaml
   - what-is-arbitrum-nitro-arbitrum-university.yaml
+  - arbitrum-nitro-design-arbitrum-university.yaml
