update bytes transaction-process-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -10,3 +10,4 @@ bytes:
   - arbitrum-foundation-arbitrum-university.yaml
   - what-is-arbitrum-nitro-arbitrum-university.yaml
   - arbitrum-nitro-design-arbitrum-university.yaml
+  - transaction-process-arbitrum-university.yaml
