update bytes arbitrum-one-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -11,3 +11,4 @@ bytes:
   - what-is-arbitrum-nitro-arbitrum-university.yaml
   - arbitrum-nitro-design-arbitrum-university.yaml
   - transaction-process-arbitrum-university.yaml
+  - arbitrum-one-arbitrum-university.yaml
