update bytes arbitrum-protocol-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -12,3 +12,4 @@ bytes:
   - arbitrum-nitro-design-arbitrum-university.yaml
   - transaction-process-arbitrum-university.yaml
   - arbitrum-one-arbitrum-university.yaml
+  - arbitrum-protocol-arbitrum-university.yaml
