update bytes arbitrum-protocol-arbitrum-university

--- a/src/bytes/main/arbitrum-protocol-arbitrum-university.yaml
+++ b/src/bytes/main/arbitrum-protocol-arbitrum-university.yaml
@@ -1,6 +1,6 @@
-uniqueId: eae133fe-e2e3-40cc-8af5-f6851ea833d2
+uniqueId: eb856fee-9388-4d97-8b05-5a525f153876
 id: arbitrum-protocol-arbitrum-university
-name: Arbitrum Protocol
+name: Rollup Protocol
 content: Understanding the Arbitrum Rollup Protocol and its benefits
 created: '2023-11-17T14:20:03.431Z'
 visibility: Public
