update bytes rollup-and-rblock-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -13,3 +13,4 @@ bytes:
   - transaction-process-arbitrum-university.yaml
   - arbitrum-one-arbitrum-university.yaml
   - arbitrum-protocol-arbitrum-university.yaml
+  - rollup-and-rblock-arbitrum-university.yaml
