update bytes rollup-and-rblock-arbitrum-university

--- a/src/bytes/main/rollup-and-rblock-arbitrum-university.yaml
+++ b/src/bytes/main/rollup-and-rblock-arbitrum-university.yaml
@@ -1,6 +1,6 @@
-uniqueId: f06297ff-5df2-47dd-9242-b6ca30d6e92f
+uniqueId: 41f88f36-0d1e-4c62-981d-d27d098d58d8
 id: rollup-and-rblock-arbitrum-university
-name: Rollup and RBlock
+name: Working of Roll ups
 content: Deeper look into workings of Rollup chain
 created: '2023-11-17T14:53:12.733Z'
 visibility: Public
