--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -14,3 +14,4 @@ bytes:
   - arbitrum-one-arbitrum-university.yaml
   - arbitrum-protocol-arbitrum-university.yaml
   - rollup-and-rblock-arbitrum-university.yaml
+  - rollup-security-arbitrum-university.yaml
