update bytes what-is-arbitrum-nova-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -15,3 +15,4 @@ bytes:
   - arbitrum-protocol-arbitrum-university.yaml
   - rollup-and-rblock-arbitrum-university.yaml
   - rollup-security-arbitrum-university.yaml
+  - what-is-arbitrum-nova-arbitrum-university.yaml
