update bytes anytrust-protocol-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -16,3 +16,4 @@ bytes:
   - rollup-and-rblock-arbitrum-university.yaml
   - rollup-security-arbitrum-university.yaml
   - what-is-arbitrum-nova-arbitrum-university.yaml
+  - anytrust-protocol-arbitrum-university.yaml
