update bytes how-anytrust-works-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -17,3 +17,4 @@ bytes:
   - rollup-security-arbitrum-university.yaml
   - what-is-arbitrum-nova-arbitrum-university.yaml
   - anytrust-protocol-arbitrum-university.yaml
+  - how-anytrust-works-arbitrum-university.yaml
