update bytes anytrust-security-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -18,3 +18,4 @@ bytes:
   - what-is-arbitrum-nova-arbitrum-university.yaml
   - anytrust-protocol-arbitrum-university.yaml
   - how-anytrust-works-arbitrum-university.yaml
+  - anytrust-security-arbitrum-university.yaml
