update bytes what-is-arbitrum-orbit-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -19,3 +19,4 @@ bytes:
   - anytrust-protocol-arbitrum-university.yaml
   - how-anytrust-works-arbitrum-university.yaml
   - anytrust-security-arbitrum-university.yaml
+  - what-is-arbitrum-orbit-arbitrum-university.yaml
