update bytes benefits-of-orbit-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -20,3 +20,4 @@ bytes:
   - how-anytrust-works-arbitrum-university.yaml
   - anytrust-security-arbitrum-university.yaml
   - what-is-arbitrum-orbit-arbitrum-university.yaml
+  - benefits-of-orbit-arbitrum-university.yaml
