--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -21,3 +21,4 @@ bytes:
   - anytrust-security-arbitrum-university.yaml
   - what-is-arbitrum-orbit-arbitrum-university.yaml
   - benefits-of-orbit-arbitrum-university.yaml
+  - orbit-licensing-arbitrum-university.yaml
