--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -22,3 +22,4 @@ bytes:
   - what-is-arbitrum-orbit-arbitrum-university.yaml
   - benefits-of-orbit-arbitrum-university.yaml
   - orbit-licensing-arbitrum-university.yaml
+  - stylus-overview-arbitrum-university.yaml
