update bytes working-of-stylus-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -23,3 +23,4 @@ bytes:
   - benefits-of-orbit-arbitrum-university.yaml
   - orbit-licensing-arbitrum-university.yaml
   - stylus-overview-arbitrum-university.yaml
+  - working-of-stylus-arbitrum-university.yaml
