update bytes what-is-voting-in-dao-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -24,3 +24,4 @@ bytes:
   - orbit-licensing-arbitrum-university.yaml
   - stylus-overview-arbitrum-university.yaml
   - working-of-stylus-arbitrum-university.yaml
+  - what-is-voting-in-dao-arbitrum-university.yaml
