update bytes dao-delegation-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -25,3 +25,4 @@ bytes:
   - stylus-overview-arbitrum-university.yaml
   - working-of-stylus-arbitrum-university.yaml
   - what-is-voting-in-dao-arbitrum-university.yaml
+  - dao-delegation-arbitrum-university.yaml
