update bytes dao-proposal-submission-arbitrum-university

--- a/src/bytes/main/bytes.yaml
+++ b/src/bytes/main/bytes.yaml
@@ -26,3 +26,4 @@ bytes:
   - working-of-stylus-arbitrum-university.yaml
   - what-is-voting-in-dao-arbitrum-university.yaml
   - dao-delegation-arbitrum-university.yaml
+  - dao-proposal-submission-arbitrum-university.yaml
