--- a/src/bytes/main/what-is-arbitrum-orbit-arbitrum-university.yaml
+++ b/src/bytes/main/what-is-arbitrum-orbit-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: 0fac6cf6-0c2e-4da0-a5bd-809b6ca60720
+uniqueId: 3ddaa099-27ac-40a5-8ef0-4b7c31877369
 id: what-is-arbitrum-orbit-arbitrum-university
 name: What is Arbitrum Orbit?
 content: Understanding the concept and features of Arbitrum Orbit
@@ -76,7 +76,9 @@ steps:
             content: Nitro's fraud proofs
           - key: D
             content: Flexible, scalable, and secure platform
-        content: What does the governance of Orbit chains provide?
+        content: >-
+          What is the benefit of independently determined governance of Orbit
+          chains?
         answerKeys:
           - D
         explanation: >-
