--- a/src/bytes/main/benefits-of-orbit-arbitrum-university.yaml
+++ b/src/bytes/main/benefits-of-orbit-arbitrum-university.yaml
@@ -84,17 +84,26 @@ steps:
         uuid: fcfaf062-6513-454d-bc84-c71ee7c4d6cd
         choices:
           - key: A
-            content: Launching decentralized applications
+            content: It restricts developers to using a single security model.
           - key: B
-            content: Progressive decentralization
+            content: >-
+              It allows developers to explore different security models to suit
+              their project's needs, including choices between Arbitrum One and
+              Arbitrum Nova.
           - key: C
-            content: Creating customized execution environments
+            content: >-
+              Orbit eliminates the need for security in smart contract
+              development.
           - key: D
-            content: Establishing governance mechanisms
-        content: What does Orbit lower barriers to within the blockchain space?
+            content: >-
+              It provides a fixed security model that prioritizes expenses over
+              security.
+        content: How does Orbit benefit developers in terms of security models?
         answerKeys:
           - B
         explanation: >-
-          Orbit lowers barriers to progressive decentralization, making it more
-          feasible for developers to launch decentralized applications.
+          Orbit allows developers to explore various security models to tailor
+          their projects' needs effectively. It gives the option to choose
+          between Arbitrum One or Arbitrum Nova, simplifying the process of
+          balancing security and expenses.
 spaceId: arbitrum-university
